# ufmt_float

./: .gitignore  Cargo.toml  README.md
.github/workflows/: quick-check.yml
src/: lib.rs
tests/: format-tests.rs
